Updated Wiki link, updated last updated date, etc Minor code reorganization Fix Github badge Tried and failed to fix issue #59, but got closer Changed default mode to Together ... this codebase is wild. I started this?

--- a/html/style/main.css
+++ b/html/style/main.css
@@ -540,17 +540,26 @@ strong {
   box-shadow: inset 0px 0px 5px 3px #eee;
   border-radius: 5px;
 }
+
+.github-link {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+}
+
 @media(max-width: 1000px) {
   #navbar .listmenu {
     margin-top: 5px;
     display: block;
   }
 }
-@media(max-width: 767px) {
+@media(max-width: 1150px) {
   .github-link {
     display: none;
   }
-
+}
+@media(max-width: 767px) {
   .ingredientdropdown {
     overflow: auto;
   }
